compiler/kernc_cli/tests/soundness/reject/closures/function_item_callback_does_not_synthesize_trait_object_param_upcast.kn
// source: callback coercions must not synthesize a thunk that downcasts the parameter side through a trait-object upcast
// stderr: expected `&Fn(&Derived[4]) i32`

trait Base[N: usize] {
    fn tag() i32;
};

trait Derived[N: usize]: Base[N] {};

struct X {};

impl &X: Derived[4] {}

impl &X: Base[4] {
    fn tag() i32 {
        return 7;
    }
}

fn use_base(value: &Base[4]) i32 {
    return value.tag();
}

fn take(cb: &Fn(&Derived[4]) i32) i32 {
    let x = X.{};
    let derived = (x.& as &Derived[4]);
    return cb(derived);
}

fn main() i32 {
    return take(use_base) - 7;
}
